--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "homepage": "https://github.com/brizer/brizer-crx#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "antd": "^3.20.4",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.0",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
