--- a/package.json
+++ b/package.json
@@ -26,15 +26,20 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
     "antd": "^3.20.4",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.0",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.0",
+    "css-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
@@ -42,5 +47,8 @@
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.0.1"
   }
 }
