--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,5 +15,14 @@
     "persistent": true,
     "page": "background/index.html"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["inject/index.js"],
+      "run_at": "document_start",
+      "all_frames": true,
+      "match_about_blank": true
+    }
+  ],
   "permissions": ["storage", "tabs", "<all_urls>"]
 }
