--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/chrome": "0.0.86",
+    "@types/promise.allsettled": "^1.0.2",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "http-mockjs": "^3.3.4",
+    "promise.allsettled": "^1.0.1",
     "react-router-dom": "^5.0.1"
   }
 }
