--- a/package.json
+++ b/package.json
@@ -56,8 +56,11 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@tomato-js/function": "0.0.11",
+    "codemirror": "^5.52.2",
     "http-mockjs": "^3.3.4",
     "promise.allsettled": "^1.0.1",
+    "react-codemirror2": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "rss-parser": "^3.7.3"
   }
