--- a/.httpmockrc
+++ b/.httpmockrc
@@ -21,6 +21,10 @@
         {
             "path": "/api/github/trend/weekly/typescript.html"
         },
+        "GET /api/taobao/dargon.html": 
+        {
+            "path": "/api/taobao/dargon.html"
+        },
         "GET /api/rss/githubActive.json":
         {
             "path": "/api/rss/githubActive.xml"
