--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/cheerio": "^0.22.18",
     "@types/chrome": "0.0.86",
     "@types/promise.allsettled": "^1.0.2",
     "@types/react": "^16.8.23",
@@ -58,6 +59,8 @@
   "dependencies": {
     "@tomato-js/element": "0.0.14",
     "@tomato-js/function": "0.0.11",
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "codemirror": "^5.52.2",
     "http-mockjs": "^3.3.4",
     "promise.allsettled": "^1.0.1",
