--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/cheerio": "^0.22.18",
     "@types/chrome": "0.0.86",
+    "@types/ms": "^0.7.31",
     "@types/promise.allsettled": "^1.0.2",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
@@ -62,7 +63,9 @@
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "codemirror": "^5.52.2",
-    "http-mockjs": "^3.3.4",
+    "http-mockjs": "^4.5.4",
+    "moment": "^2.27.0",
+    "ms": "^2.1.2",
     "promise.allsettled": "^1.0.1",
     "react-codemirror2": "^7.1.0",
     "react-router-dom": "^5.0.1",
